syntax = "proto3";

package ru.practicum.ewm.stats.proto;

import "messages/recommendations_messages.proto";
import "google/protobuf/empty.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser(UserPredictionsRequestProto)
      returns (stream RecommendedEventProto);

  rpc GetSimilarEvents(SimilarEventsRequestProto)
      returns (stream RecommendedEventProto);

  rpc GetInteractionsCount(InteractionsCountRequestProto)
      returns (stream RecommendedEventProto);
}